Add PatientAppointmentTest class and update PatientProfile to use List.copyOf for medical history and active appointments